Updated build and run scripts